--- a/account-notifications.html
+++ b/account-notifications.html
@@ -2319,10 +2319,10 @@
     </div>
 
     <!-- Edit Modal -->
-    <div dir="ltr" class="d-none" id="edit-modal">
-      <div class="_1t0jy5tw"></div>
+    <div dir="ltr" class='d-none' id="edit-modal">
+      <div class="modal__backdrop"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
@@ -2333,7 +2333,7 @@
                 class="_1pusc02v"
                 style="position: relative"
               >
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
                     <span class="_e296pg"
                       ><svg
@@ -2357,12 +2357,12 @@
                     ></span>
                   </button>
                 </div>
-                <header class="_1b0cy6g">
+                <header class="modal__header">
                   <div class="_1tng6ym"></div>
-                  <div class="_9t7ktw"></div>
+                  <div class="modal__heading"></div>
                   <div class="_rrmdgl"></div>
                 </header>
-                <div class="_12kfhdn" data-testid="channel-optout-modal">
+                <div class="modal__body" data-testid="channel-optout-modal">
                   <section>
                     <div class="_wz0eg0">
                       <h2
@@ -2535,9 +2535,9 @@
 
     <!-- Unsubscribe Modal -->
     <div dir="ltr" class="d-none" id="unsubscribe-modal">
-      <div class="_1t0jy5tw"></div>
+      <div class="modal__backdrop"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
@@ -2548,7 +2548,7 @@
                 class="_1ucy1zjv"
                 style="position: relative"
               >
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
                     <span class="_e296pg"
                       ><svg
@@ -2574,7 +2574,7 @@
                 </div>
                 <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
-                  <div class="_9t7ktw">
+                  <div class="modal__heading">
                     <h1
                       tabindex="-1"
                       class="heading"
@@ -2585,7 +2585,7 @@
                   </div>
                   <div class="_rrmdgl"></div>
                 </header>
-                <div class="_12kfhdn">
+                <div class="modal__body">
                   You’ll be unsubscribing from all marketing emails from Airbnb.
                   This includes recommendations, travel inspiration and deals,
                   things to do in your home city, how Airbnb works, invites and
@@ -2593,7 +2593,7 @@
                   updates, home hosting tips and promotions and experience
                   hosting tips and promotions.
                 </div>
-                <footer class="_zgc1p6">
+                <footer class="modal__footer">
                   <button type="button" class="btn-link">Cancel</button
                   ><button
                     data-testid="email-optout-confirm-button"
