--- a/homepage.html
+++ b/homepage.html
@@ -17401,7 +17401,7 @@
 
     <!-- Filter modal -->
     <div dir="ltr" class="d-none" id="filter-modal">
-      <div class="_1t0jy5tw"></div>
+      <div class="modal__backdrop"></div>
       <section>
         <div class="_virdaj" data-testid="modal-container">
           <div class="_z4lmgp">
@@ -17414,7 +17414,7 @@
                 class="_wheg71v"
                 style="position: relative"
               >
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
                     <span class="_e296pg"
                       ><svg
@@ -17467,7 +17467,7 @@
                                 >
                                   <div class="_1youxq0">
                                     <div class="_1tng6ym"></div>
-                                    <div class="_9t7ktw">
+                                    <div class="modal__heading">
                                       <div class="_1q9sh65">Filters</div>
                                     </div>
                                     <div class="_rrmdgl"></div>
@@ -20236,7 +20236,7 @@
                             data-section-id="COMPOSITE_FILTER_FOOTER_ALL_FILTERS:TAB_8225"
                           >
                             <div class="_kr7m4r">
-                              <footer class="_zgc1p6">
+                              <footer class="modal__footer">
                                 <button type="button" class="btn-link">
                                   Clear all</button
                                 ><a
