--- a/personal-info.html
+++ b/personal-info.html
@@ -8454,9 +8454,9 @@
 
     <!-- Goverment ID remove modal -->
     <div dir="ltr" class="d-none" id="goverment-id-modal">
-      <div class="_1t0jy5tw"></div>
+      <div class="modal__backdrop"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
@@ -8467,7 +8467,7 @@
                 class="_1ucy1zjv"
                 style="position: relative"
               >
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button
                     aria-label="Close"
                     type="button"
@@ -8496,7 +8496,7 @@
                     ></span>
                   </button>
                 </div>
-                <div class="_12kfhdn" tabindex="0">
+                <div class="modal__body" tabindex="0">
                   <div class="_168rcn0">
                     Are you sure you want to remove your ID?
                   </div>
@@ -8510,7 +8510,7 @@
                     has ended.
                   </div>
                 </div>
-                <footer class="_zgc1p6">
+                <footer class="modal__footer">
                   <button type="button" class="btn-link">Cancel</button>
                   <form>
                     <button type="submit" class="btn-dark">Remove ID</button>
