--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1368,7 +1368,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-dialog-centered" class="_vxvq8x">
+      <div class="modal-dialog modal-dialog-centered" class="modal__container">
         <div
           role="dialog"
           aria-label="Select primary language"
@@ -1376,7 +1376,7 @@
           class="_1ucy1zjv"
           style="position: relative"
         >
-          <div class="_pa35zs">
+          <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
               <span class="_e296pg"
                 ><svg
@@ -1403,7 +1403,7 @@
           </div>
           <header class="_1youxq0">
             <div class="_1tng6ym"></div>
-            <div class="_9t7ktw">
+            <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                 <div class="_1q9sh65">
                   <span id="primary-language-group-label"
@@ -1414,7 +1414,7 @@
             </div>
             <div class="_rrmdgl"></div>
           </header>
-          <div class="_12kfhdn">
+          <div class="modal__body">
             <div
               role="radiogroup"
               aria-labelledby="primary-language-group-label"
@@ -1554,7 +1554,7 @@
               </div>
             </div>
           </div>
-          <footer class="_zgc1p6">
+          <footer class="modal__footer">
             <div class="_ls0e43">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
@@ -1584,7 +1584,7 @@
           class="_1ucy1zjv"
           style="position: relative"
         >
-          <div class="_pa35zs">
+          <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
               <span class="_e296pg"
                 ><svg
@@ -1611,7 +1611,7 @@
           </div>
           <header class="_1youxq0">
             <div class="_1tng6ym"></div>
-            <div class="_9t7ktw">
+            <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                 <div class="_1q9sh65">
                   <span id="additional-languages-group-label"
@@ -1622,7 +1622,7 @@
             </div>
             <div class="_rrmdgl"></div>
           </header>
-          <div class="_12kfhdn">
+          <div class="modal__body">
             <div
               class="_hq87c8"
               role="group"
@@ -2586,7 +2586,7 @@
               </div>
             </div>
           </div>
-          <footer class="_zgc1p6">
+          <footer class="modal__footer">
             <div class="_ls0e43">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
