--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1210,7 +1210,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-dialog-centered" class="_vxvq8x">
+      <div class="modal-dialog modal-dialog-centered" class="modal__container">
         <div class="_z4lmgp">
           <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
           <div class="_z4lmgp">
@@ -1221,7 +1221,7 @@
               class="_1ucy1zjv"
               style="position: relative"
             >
-              <div class="_pa35zs">
+              <div class="modal__close">
                 <button aria-label="Close" type="button" class="btn-close">
                   <span class="_e296pg"
                     ><svg
@@ -1246,9 +1246,9 @@
                   </span>
                 </button>
               </div>
-              <header class="_1b0cy6g">
+              <header class="modal__header">
                 <div class="_1tng6ym"></div>
-                <div class="_9t7ktw">
+                <div class="modal__heading">
                   <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                     <div class="_1q9sh65">Select a theme</div>
                   </h1>
@@ -1299,7 +1299,7 @@
                   </label>
                 </div>
               </div>
-              <div class="_12kfhdn" data-testid="modal-body">
+              <div class="modal__body" data-testid="modal-body">
                 <div class="_kejy30h">
                   <div class="_1d7txt4">
                     <div class="_1xku4ev">
@@ -1811,7 +1811,7 @@
                   </div>
                 </div>
               </div>
-              <footer class="_zgc1p6">
+              <footer class="modal__footer">
                 <button type="button" class="btn-link">Cancel</button
                 ><button
                   data-testid="save-theme-button"
