--- a/basics.html
+++ b/basics.html
@@ -949,7 +949,7 @@
       aria-labelledby="exampleModalLabel"
       aria-hidden="true"
     >
-      <div class="modal-dialog modal-dialog-centered" class="_vxvq8x">
+      <div class="modal-dialog modal-dialog-centered" class="modal__container">
         <div
           role="dialog"
           aria-label="Select primary language"
@@ -957,7 +957,7 @@
           class="_1ucy1zjv"
           style="position: relative"
         >
-          <div class="_pa35zs">
+          <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
               <span class="_e296pg"
                 ><svg
@@ -984,7 +984,7 @@
           </div>
           <header class="_1youxq0">
             <div class="_1tng6ym"></div>
-            <div class="_9t7ktw">
+            <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                 <div class="_1q9sh65">
                   <span id="primary-language-group-label"
@@ -995,7 +995,7 @@
             </div>
             <div class="_rrmdgl"></div>
           </header>
-          <div class="_12kfhdn">
+          <div class="modal__body">
             <div
               role="radiogroup"
               aria-labelledby="primary-language-group-label"
@@ -1135,7 +1135,7 @@
               </div>
             </div>
           </div>
-          <footer class="_zgc1p6">
+          <footer class="modal__footer">
             <div class="_ls0e43">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
@@ -1165,7 +1165,7 @@
           class="_1ucy1zjv"
           style="position: relative"
         >
-          <div class="_pa35zs">
+          <div class="modal__close">
             <button aria-label="Close" type="button" class="btn-close">
               <span class="_e296pg"
                 ><svg
@@ -1192,7 +1192,7 @@
           </div>
           <header class="_1youxq0">
             <div class="_1tng6ym"></div>
-            <div class="_9t7ktw">
+            <div class="modal__heading">
               <h1 tabindex="-1" class="heading" elementtiming="LCP-target">
                 <div class="_1q9sh65">
                   <span id="additional-languages-group-label"
@@ -1203,7 +1203,7 @@
             </div>
             <div class="_rrmdgl"></div>
           </header>
-          <div class="_12kfhdn">
+          <div class="modal__body">
             <div
               class="_hq87c8"
               role="group"
@@ -2167,7 +2167,7 @@
               </div>
             </div>
           </div>
-          <footer class="_zgc1p6">
+          <footer class="modal__footer">
             <div class="_ls0e43">
               <button data-testid="save-button" type="button" class="btn-dark">
                 Save
