--- a/profile.html
+++ b/profile.html
@@ -3230,9 +3230,9 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
     </div>
     <!-- Learn more modal -->
     <div dir="ltr" id="learn-more-modal" class="d-none">
-      <div class="_1t0jy5tw"></div>
+      <div class="modal__backdrop"></div>
       <section>
-        <div class="_vxvq8x" data-testid="modal-container">
+        <div class="modal__container" data-testid="modal-container">
           <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
@@ -3243,7 +3243,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                 class="_1ucy1zjv"
                 style="position: relative"
               >
-                <div class="_pa35zs">
+                <div class="modal__close">
                   <button aria-label="Close" type="button" class="btn-close">
                     <span class="_e296pg"
                       ><svg
@@ -3269,7 +3269,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                 </div>
                 <header class="_1youxq0">
                   <div class="_1tng6ym"></div>
-                  <div class="_9t7ktw">
+                  <div class="modal__heading">
                     <h1
                       tabindex="-1"
                       class="heading"
