rename btn-wishlist, btn-nav

--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -540,7 +540,7 @@
                                                                   <button
                                                                     aria-label="Photo options"
                                                                     type="button"
-                                                                    class="_1d3iagv"
+                                                                    class="btn-nav"
                                                                   >
                                                                     <span
                                                                       class="_3hmsj"
@@ -677,7 +677,7 @@
                                                                   <button
                                                                     aria-label="Photo options"
                                                                     type="button"
-                                                                    class="_1d3iagv"
+                                                                    class="btn-nav"
                                                                   >
                                                                     <span
                                                                       class="_3hmsj"
@@ -814,7 +814,7 @@
                                                                   <button
                                                                     aria-label="Photo options"
                                                                     type="button"
-                                                                    class="_1d3iagv"
+                                                                    class="btn-nav"
                                                                   >
                                                                     <span
                                                                       class="_3hmsj"
@@ -951,7 +951,7 @@
                                                                   <button
                                                                     aria-label="Photo options"
                                                                     type="button"
-                                                                    class="_1d3iagv"
+                                                                    class="btn-nav"
                                                                   >
                                                                     <span
                                                                       class="_3hmsj"
@@ -1088,7 +1088,7 @@
                                                                   <button
                                                                     aria-label="Photo options"
                                                                     type="button"
-                                                                    class="_1d3iagv"
+                                                                    class="btn-nav"
                                                                   >
                                                                     <span
                                                                       class="_3hmsj"
