--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -201,7 +201,7 @@
                             <button
                               aria-label="Today"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -228,7 +228,7 @@
                             ><button
                               aria-label="Previous day"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -257,7 +257,7 @@
                           ><button
                             aria-label="Next day"
                             type="button"
-                            class="_1d3iagv"
+                            class="btn-nav"
                           >
                             <span class="_3hmsj"
                               ><svg
@@ -364,7 +364,7 @@
                             <button
                               aria-label="Today"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -389,7 +389,7 @@
                               ><button
                                 aria-label="Previous month"
                                 type="button"
-                                class="_1d3iagv"
+                                class="btn-nav"
                               >
                                 <span class="_3hmsj"
                                   ><svg
@@ -419,7 +419,7 @@
                               ><button
                                 aria-label="Next month"
                                 type="button"
-                                class="_1d3iagv"
+                                class="btn-nav"
                               >
                                 <span class="_3hmsj"
                                   ><svg
