--- a/calendar_week.html
+++ b/calendar_week.html
@@ -198,7 +198,7 @@
                             <button
                               aria-label="Today"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -225,7 +225,7 @@
                             ><button
                               aria-label="Previous week"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -254,7 +254,7 @@
                           ><button
                             aria-label="Next week"
                             type="button"
-                            class="_1d3iagv"
+                            class="btn-nav"
                           >
                             <span class="_3hmsj"
                               ><svg
@@ -361,7 +361,7 @@
                             <button
                               aria-label="Today"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -386,7 +386,7 @@
                               ><button
                                 aria-label="Previous month"
                                 type="button"
-                                class="_1d3iagv"
+                                class="btn-nav"
                               >
                                 <span class="_3hmsj"
                                   ><svg
@@ -416,7 +416,7 @@
                               ><button
                                 aria-label="Next month"
                                 type="button"
-                                class="_1d3iagv"
+                                class="btn-nav"
                               >
                                 <span class="_3hmsj"
                                   ><svg
