--- a/dashboard.html
+++ b/dashboard.html
@@ -3029,7 +3029,7 @@
                             ><button
                               aria-label="back to the previous news"
                               type="button"
-                              class="_1d3iagv"
+                              class="btn-nav"
                             >
                               <span class="_3hmsj"
                                 ><svg
@@ -3052,7 +3052,7 @@
                           ><button
                             aria-label="next news update"
                             type="button"
-                            class="_1d3iagv"
+                            class="btn-nav"
                           >
                             <span class="_3hmsj"
                               ><svg
