--- a/products.html
+++ b/products.html
@@ -10017,7 +10017,7 @@
                                                     <span style="top: 50%"
                                                       ><button
                                                         type="button"
-                                                        class="_1d3iagv"
+                                                        class="btn-nav"
                                                       >
                                                         <span class="_3hmsj"
                                                           ><svg
