--- a/edit/photos.html
+++ b/edit/photos.html
@@ -545,7 +545,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -739,7 +739,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -870,7 +870,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -1001,7 +1001,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -1132,7 +1132,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -1263,7 +1263,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -1394,7 +1394,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -1525,7 +1525,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
@@ -1656,7 +1656,7 @@
                                                             <button
                                                               aria-label="Photo options"
                                                               type="button"
-                                                              class="_1d3iagv"
+                                                              class="btn-nav"
                                                             >
                                                               <span
                                                                 class="_3hmsj"
