--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1185,7 +1185,7 @@
                                                                 <button
                                                                   aria-label="Photo options"
                                                                   type="button"
-                                                                  class="_1d3iagv"
+                                                                  class="btn-nav"
                                                                 >
                                                                   <span
                                                                     class="_3hmsj"
@@ -1309,7 +1309,7 @@
                                                                 <button
                                                                   aria-label="Photo options"
                                                                   type="button"
-                                                                  class="_1d3iagv"
+                                                                  class="btn-nav"
                                                                 >
                                                                   <span
                                                                     class="_3hmsj"
@@ -1433,7 +1433,7 @@
                                                                 <button
                                                                   aria-label="Photo options"
                                                                   type="button"
-                                                                  class="_1d3iagv"
+                                                                  class="btn-nav"
                                                                 >
                                                                   <span
                                                                     class="_3hmsj"
@@ -1557,7 +1557,7 @@
                                                                 <button
                                                                   aria-label="Photo options"
                                                                   type="button"
-                                                                  class="_1d3iagv"
+                                                                  class="btn-nav"
                                                                 >
                                                                   <span
                                                                     class="_3hmsj"
@@ -1681,7 +1681,7 @@
                                                                 <button
                                                                   aria-label="Photo options"
                                                                   type="button"
-                                                                  class="_1d3iagv"
+                                                                  class="btn-nav"
                                                                 >
                                                                   <span
                                                                     class="_3hmsj"
