--- a/specific_trip.html
+++ b/specific_trip.html
@@ -748,7 +748,7 @@
                                                                 class="_18hl5q5"
                                                               >
                                                                 <div
-                                                                  class="_1b2klj3"
+                                                                  class="pagination-bullet-wrapper"
                                                                   style="
                                                                     transform: translateX(
                                                                       0px
