rename form__check-input--checked, form__input

--- a/basics.html
+++ b/basics.html
@@ -682,7 +682,7 @@
                                             role="combobox"
                                             data-testid="city-input"
                                             data-reach-combobox-input=""
-                                            class="_yrzsibu"
+                                            class="form__input"
                                             id="submission_city"
                                             autocomplete="off"
                                             type="text"
@@ -1379,7 +1379,7 @@
                       data-testid="additional-language-en"
                       id="checkbox-en"
                       name="en"
-                      class="_smt4n2a"
+                      class="form__check-input--checked"
                       type="checkbox"
                       checked="" /><span class="_1v5cvwv4" data-checkbox="true"
                       ><span class="_1oj8hra"
