--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -228,7 +228,7 @@
                                           name="SURVEILLANCE"
                                           aria-labelledby="SURVEILLANCE-row-title"
                                           id="SURVEILLANCE-row-checkbox"
-                                          class="_smt4n2a"
+                                          class="form__check-input--checked"
                                           checked="" /><span
                                           class="_1v5cvwv4"
                                           data-checkbox="true"
