--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -556,7 +556,7 @@
                                         name="new-listing-promotion"
                                         aria-labelledby="new-listing-promotion-row-title"
                                         id="new-listing-promotion-row-checkbox"
-                                        class="_smt4n2a"
+                                        class="form__check-input--checked"
                                         checked="" /><span
                                         class="_1v5cvwv4"
                                         data-checkbox="true"
