--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -4550,7 +4550,7 @@
                                       <div class="_j1kt73">₱</div>
                                     </div>
                                     <input
-                                      class="_yrzsibu"
+                                      class="form__input"
                                       id="price_per_guest"
                                       autocomplete="off"
                                       type="text"
@@ -4581,7 +4581,7 @@
                                       <div class="_j1kt73">From ₱</div>
                                     </div>
                                     <input
-                                      class="_yrzsibu"
+                                      class="form__input"
                                       id="private_group_price"
                                       autocomplete="off"
                                       type="text"
@@ -4607,7 +4607,7 @@
                                 <div dir="ltr">
                                   <div class="_fywymp7">
                                     <input
-                                      class="_yrzsibu"
+                                      class="form__input"
                                       id="max_guests"
                                       autocomplete="off"
                                       type="text"
@@ -4638,7 +4638,7 @@
                                 <div dir="ltr">
                                   <div class="_fywymp7">
                                     <input
-                                      class="_yrzsibu"
+                                      class="form__input"
                                       id="max_private_guests"
                                       autocomplete="off"
                                       type="text"
