--- a/edit/bring.html
+++ b/edit/bring.html
@@ -483,7 +483,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       data-testid="packing-item-0"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="packing-item-0"
                                                       autocomplete="off"
                                                       type="text"
@@ -543,7 +543,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       data-testid="packing-item-1"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="packing-item-1"
                                                       autocomplete="off"
                                                       type="text"
@@ -603,7 +603,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       data-testid="packing-item-2"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="packing-item-2"
                                                       autocomplete="off"
                                                       type="text"
@@ -663,7 +663,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       data-testid="packing-item-3"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="packing-item-3"
                                                       autocomplete="off"
                                                       type="text"
@@ -723,7 +723,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       data-testid="packing-item-4"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="packing-item-4"
                                                       autocomplete="off"
                                                       type="text"
@@ -783,7 +783,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       data-testid="packing-item-5"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="packing-item-5"
                                                       autocomplete="off"
                                                       type="text"
