--- a/personal-info.html
+++ b/personal-info.html
@@ -385,7 +385,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       name="first_name"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="first_name"
                                                       autocomplete="off"
                                                       type="text"
@@ -414,7 +414,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       name="last_name"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="last_name"
                                                       autocomplete="off"
                                                       type="text"
@@ -749,7 +749,7 @@
                                               <div class="_fywymp7">
                                                 <input
                                                   name="email"
-                                                  class="_yrzsibu"
+                                                  class="form__input"
                                                   id="email-input"
                                                   autocomplete="off"
                                                   type="text"
@@ -3787,7 +3787,7 @@
                                                       <div class="_fywymp7">
                                                         <input
                                                           name="first_name"
-                                                          class="_yrzsibu"
+                                                          class="form__input"
                                                           id="first_name"
                                                           autocomplete="off"
                                                           type="text"
@@ -3816,7 +3816,7 @@
                                                       <div class="_fywymp7">
                                                         <input
                                                           name="last_name"
-                                                          class="_yrzsibu"
+                                                          class="form__input"
                                                           id="last_name"
                                                           autocomplete="off"
                                                           type="text"
@@ -4162,7 +4162,7 @@
                                                   <div class="_fywymp7">
                                                     <input
                                                       name="email"
-                                                      class="_yrzsibu"
+                                                      class="form__input"
                                                       id="email-input"
                                                       autocomplete="off"
                                                       type="text"
