--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -289,7 +289,7 @@
                             <div dir="ltr">
                               <div class="_fywymp7">
                                 <input
-                                  class="_yrzsibu"
+                                  class="form__input"
                                   id="request_amount"
                                   autocomplete="off"
                                   type="text"
