--- a/signup_login.html
+++ b/signup_login.html
@@ -2588,7 +2588,7 @@
                                                     placeholder="Email"
                                                     name="user[email]"
                                                     data-testid="email-signup-email"
-                                                    class="_yrzsibu"
+                                                    class="form__input"
                                                     id="email-signup-email"
                                                     autocomplete="off"
                                                     inputmode="email"
@@ -2983,7 +2983,7 @@
                                             ><input
                                               id="email-signupuser_profile_info[receive_promotional_email]"
                                               name="email-signupuser_profile_info[receive_promotional_email]"
-                                              class="_smt4n2a"
+                                              class="form__check-input--checked"
                                               type="checkbox"
                                               value="1" /><span
                                               class="_1v5cvwv4"
@@ -5619,7 +5619,7 @@
                                                   placeholder="Email"
                                                   name="user[email]"
                                                   data-testid="email-signup-email"
-                                                  class="_yrzsibu"
+                                                  class="form__input"
                                                   id="email-signup-email"
                                                   autocomplete="off"
                                                   inputmode="email"
@@ -6008,7 +6008,7 @@
                                           ><input
                                             id="email-signupuser_profile_info[receive_promotional_email]"
                                             name="email-signupuser_profile_info[receive_promotional_email]"
-                                            class="_smt4n2a"
+                                            class="form__check-input--checked"
                                             type="checkbox"
                                             value="1" /><span
                                             class="_1v5cvwv4"
@@ -6909,7 +6909,7 @@
                                                 name="user[email]"
                                                 data-testid="email-login-email"
                                                 aria-required="true"
-                                                class="_yrzsibu"
+                                                class="form__input"
                                                 id="email-login-email"
                                                 autocomplete="off"
                                                 inputmode="email"
