--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1290,7 +1290,7 @@
                                         <div class="_utak6qs">INR</div>
                                         <input
                                           pattern="\d*"
-                                          class="_yrzsibu"
+                                          class="form__input"
                                           id="trip_template_minimum_private_booking_price"
                                           autocomplete="off"
                                           type="number"
