rename  btn-dark--small

--- a/dashboard.html
+++ b/dashboard.html
@@ -3132,7 +3132,7 @@
                               <div class="_ul9yoa0">
                                 <a
                                   href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
-                                  class="_1lerwp6l"
+                                  class="btn-dark--small"
                                   >Learn more</a
                                 ><button type="button" class="_1e5q4qoz">
                                   Close
