--- a/experienceType.html
+++ b/experienceType.html
@@ -3258,7 +3258,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
