--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1261,7 +1261,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
