--- a/submission/review.html
+++ b/submission/review.html
@@ -1438,7 +1438,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               <span class="_j1kt73">Submit</span>
