--- a/basics.html
+++ b/basics.html
@@ -909,7 +909,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
