--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1328,7 +1328,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
