--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1165,7 +1165,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
