--- a/submission/participation.html
+++ b/submission/participation.html
@@ -1160,7 +1160,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
