--- a/submission/title.html
+++ b/submission/title.html
@@ -1177,7 +1177,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
