--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1158,7 +1158,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Got it!
