--- a/submission/video.html
+++ b/submission/video.html
@@ -1275,7 +1275,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
