--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1457,7 +1457,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="_1lerwp6l"
+                              class="btn-dark--small"
                               data-veloute="lyt-next-button"
                             >
                               Next
